--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
@@ -10,19 +10,6 @@ mgl-map {
     width: 100%;
 }
 
-.marker {
-    background-size: cover;
-    background-color: #6f42c1;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    cursor: pointer;
-}
-
-.control {
-    width: 300px !important;
-}
-
 .nav-scroller {
     width: 100%;
     z-index: 1000;
@@ -57,29 +44,4 @@ mgl-map {
 .nav-underline .active {
     font-weight: 500;
     color: #343a40;
-}
-
-.text-white-50 {
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.bg-purple {
-    background-color: #6f42c1;
-}
-
-.lh-100 {
-    line-height: 1;
-}
-
-.lh-125 {
-    line-height: 1.25;
-}
-
-.lh-150 {
-    line-height: 1.5;
-}
-
-a.nav-link img {
-    font-size: 25px;
-    vertical-align: middle;
 }
